# ProjectIdeaDumpingGrounds

./: README.md
BinMerge/: README.md
codetrace_qa_tool/: README.md
fast_cond_breakpoints/: README.md
pathpacker/: README.md  main.cpp
savestate_win/: README.md  get_all_open_file_handles.cpp  save_written_memory.cpp
savestate_win/alloc_hook/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
savestate_win/alloc_hook/src/dll/: dllmain.cpp  hook.cpp  hook.h  memory.cpp  memory.h
savestate_win/alloc_hook/src/injector/: main.cpp
savestate_win/alloc_hook/src/test/: harness.cpp  memory_hooks.h
winrecord/: ImportTable.cpp  README.md
